// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`read-route shapes — golden master > pins GET /health 1`] = `
{
  "service": "api",
  "status": "ok",
}
`;

exports[`read-route shapes — golden master > pins GET /health/ready 1`] = `
{
  "dependencies": {
    "database": "configured",
    "eventBus": "configured",
    "redis": "configured",
  },
  "status": "ready",
}
`;

exports[`read-route shapes — golden master > pins GET /v1/feed/home (default ordering, limit 5) 1`] = `
{
  "nextCursor": "bHN0X3NsaWNlX2NvbWJv",
  "sections": [
    {
      "id": "live-now",
      "items": [
        {
          "affordabilityLabel": "Under $5",
          "categoryLabel": "Top rated",
          "confidenceScore": 0.86,
          "cuisine": "Mexican",
          "distanceMiles": 0.6,
          "freshnessText": "High-confidence today",
          "id": "lst_two_dollar_taco",
          "lastUpdatedAt": "2026-04-14T19:26:00.000Z",
          "latitude": 33.7714,
          "longitude": -84.3639,
          "neighborhood": "North Avenue",
          "rating": 4.8,
          "saved": false,
          "scheduleLabel": "Live now • Tue all day",
          "tags": [
            "cheap-eats",
            "student",
            "live-now",
          ],
          "title": "$2 Taco Tuesday",
          "trustBand": "user_confirmed",
          "valueNote": "Excellent quick group stop close to campus density.",
          "venueId": "ven_holy_guac",
          "venueName": "Holy Guac",
        },
      ],
      "subtitle": "Fresh, high-confidence finds around you",
      "title": "Live now",
    },
    {
      "id": "tonight",
      "items": [
        {
          "affordabilityLabel": "Under $10",
          "categoryLabel": "Drink deals",
          "confidenceScore": 0.69,
          "cuisine": "Bar",
          "distanceMiles": 1.1,
          "freshnessText": "Recently updated today",
          "id": "lst_happy_hour_pitcher",
          "lastUpdatedAt": "2026-04-14T18:11:00.000Z",
          "latitude": 33.7728,
          "longitude": -84.3661,
          "neighborhood": "Beltline East",
          "rating": 4.4,
          "saved": false,
          "scheduleLabel": "Tonight • Wed-Fri 5PM-7PM",
          "tags": [
            "drinks",
            "happy-hour",
            "beltline",
          ],
          "title": "Half-off pitcher happy hour",
          "trustBand": "merchant_confirmed",
          "valueNote": "Popular after-work and student meetup stop with drink specials.",
          "venueId": "ven_beltline_bar",
          "venueName": "Beltline Bar",
        },
        {
          "affordabilityLabel": "Under $15",
          "categoryLabel": "Group-friendly",
          "confidenceScore": 0.91,
          "cuisine": "Japanese",
          "distanceMiles": 0.5,
          "freshnessText": "Founder verified",
          "id": "lst_gyoza_bundle",
          "lastUpdatedAt": "2026-04-14T16:19:00.000Z",
          "latitude": 33.7863,
          "longitude": -84.3838,
          "neighborhood": "Colony Square",
          "rating": 4.6,
          "saved": false,
          "scheduleLabel": "Tonight • Mon-Thu 5PM-8PM",
          "tags": [
            "tonight",
            "groups",
          ],
          "title": "Free gyoza with bowl",
          "trustBand": "founder_verified",
          "valueNote": "Good fallback when groups split between ramen styles.",
          "venueId": "ven_neon_ramen",
          "venueName": "Neon Ramen",
        },
        {
          "affordabilityLabel": "Under $10",
          "categoryLabel": "Tonight",
          "confidenceScore": 0.81,
          "cuisine": "Japanese",
          "distanceMiles": 0.8,
          "freshnessText": "3 recent confirmations",
          "id": "lst_bogo_ramen",
          "lastUpdatedAt": "2026-04-14T20:48:00.000Z",
          "latitude": 33.7815,
          "longitude": -84.3873,
          "neighborhood": "Midtown",
          "rating": 4.9,
          "saved": false,
          "scheduleLabel": "Tonight • 6PM-9PM",
          "tags": [
            "tonight",
            "groups",
            "ramen",
          ],
          "title": "BOGO ramen bowls",
          "trustBand": "user_confirmed",
          "valueNote": "Strong group value with late-evening availability.",
          "venueId": "ven_sakura_ramen",
          "venueName": "Sakura Ramen House",
        },
        {
          "affordabilityLabel": "Under $5",
          "categoryLabel": "Fresh this week",
          "confidenceScore": 0.43,
          "cuisine": "Italian",
          "distanceMiles": 1.2,
          "freshnessText": "Last verified yesterday",
          "id": "lst_slice_combo",
          "lastUpdatedAt": "2026-04-13T23:07:00.000Z",
          "latitude": 33.7721,
          "longitude": -84.3632,
          "neighborhood": "Ponce",
          "rating": 4.5,
          "saved": false,
          "scheduleLabel": "Late night • Daily after 9PM",
          "tags": [
            "late-night",
            "beltline",
            "pizza",
          ],
          "title": "Late-night slice and soda",
          "trustBand": "disputed",
          "valueNote": "Fast pickup option near Beltline traffic.",
          "venueId": "ven_bella_napoli",
          "venueName": "Bella Napoli",
        },
      ],
      "subtitle": "Dinner, happy-hour, and late-evening value",
      "title": "Tonight",
    },
    {
      "id": "cheap-eats",
      "items": [
        {
          "affordabilityLabel": "Under $5",
          "categoryLabel": "Top rated",
          "confidenceScore": 0.86,
          "cuisine": "Mexican",
          "distanceMiles": 0.6,
          "freshnessText": "High-confidence today",
          "id": "lst_two_dollar_taco",
          "lastUpdatedAt": "2026-04-14T19:26:00.000Z",
          "latitude": 33.7714,
          "longitude": -84.3639,
          "neighborhood": "North Avenue",
          "rating": 4.8,
          "saved": false,
          "scheduleLabel": "Live now • Tue all day",
          "tags": [
            "cheap-eats",
            "student",
            "live-now",
          ],
          "title": "$2 Taco Tuesday",
          "trustBand": "user_confirmed",
          "valueNote": "Excellent quick group stop close to campus density.",
          "venueId": "ven_holy_guac",
          "venueName": "Holy Guac",
        },
      ],
      "subtitle": "Under-$10 plays near campus and commuter traffic",
      "title": "Cheap eats",
    },
    {
      "id": "fresh-this-week",
      "items": [
        {
          "affordabilityLabel": "Under $10",
          "categoryLabel": "Drink deals",
          "confidenceScore": 0.69,
          "cuisine": "Bar",
          "distanceMiles": 1.1,
          "freshnessText": "Recently updated today",
          "id": "lst_happy_hour_pitcher",
          "lastUpdatedAt": "2026-04-14T18:11:00.000Z",
          "latitude": 33.7728,
          "longitude": -84.3661,
          "neighborhood": "Beltline East",
          "rating": 4.4,
          "saved": false,
          "scheduleLabel": "Tonight • Wed-Fri 5PM-7PM",
          "tags": [
            "drinks",
            "happy-hour",
            "beltline",
          ],
          "title": "Half-off pitcher happy hour",
          "trustBand": "merchant_confirmed",
          "valueNote": "Popular after-work and student meetup stop with drink specials.",
          "venueId": "ven_beltline_bar",
          "venueName": "Beltline Bar",
        },
        {
          "affordabilityLabel": "Under $15",
          "categoryLabel": "Group-friendly",
          "confidenceScore": 0.91,
          "cuisine": "Japanese",
          "distanceMiles": 0.5,
          "freshnessText": "Founder verified",
          "id": "lst_gyoza_bundle",
          "lastUpdatedAt": "2026-04-14T16:19:00.000Z",
          "latitude": 33.7863,
          "longitude": -84.3838,
          "neighborhood": "Colony Square",
          "rating": 4.6,
          "saved": false,
          "scheduleLabel": "Tonight • Mon-Thu 5PM-8PM",
          "tags": [
            "tonight",
            "groups",
          ],
          "title": "Free gyoza with bowl",
          "trustBand": "founder_verified",
          "valueNote": "Good fallback when groups split between ramen styles.",
          "venueId": "ven_neon_ramen",
          "venueName": "Neon Ramen",
        },
        {
          "affordabilityLabel": "Under $10",
          "categoryLabel": "Tonight",
          "confidenceScore": 0.81,
          "cuisine": "Japanese",
          "distanceMiles": 0.8,
          "freshnessText": "3 recent confirmations",
          "id": "lst_bogo_ramen",
          "lastUpdatedAt": "2026-04-14T20:48:00.000Z",
          "latitude": 33.7815,
          "longitude": -84.3873,
          "neighborhood": "Midtown",
          "rating": 4.9,
          "saved": false,
          "scheduleLabel": "Tonight • 6PM-9PM",
          "tags": [
            "tonight",
            "groups",
            "ramen",
          ],
          "title": "BOGO ramen bowls",
          "trustBand": "user_confirmed",
          "valueNote": "Strong group value with late-evening availability.",
          "venueId": "ven_sakura_ramen",
          "venueName": "Sakura Ramen House",
        },
        {
          "affordabilityLabel": "Under $5",
          "categoryLabel": "Top rated",
          "confidenceScore": 0.86,
          "cuisine": "Mexican",
          "distanceMiles": 0.6,
          "freshnessText": "High-confidence today",
          "id": "lst_two_dollar_taco",
          "lastUpdatedAt": "2026-04-14T19:26:00.000Z",
          "latitude": 33.7714,
          "longitude": -84.3639,
          "neighborhood": "North Avenue",
          "rating": 4.8,
          "saved": false,
          "scheduleLabel": "Live now • Tue all day",
          "tags": [
            "cheap-eats",
            "student",
            "live-now",
          ],
          "title": "$2 Taco Tuesday",
          "trustBand": "user_confirmed",
          "valueNote": "Excellent quick group stop close to campus density.",
          "venueId": "ven_holy_guac",
          "venueName": "Holy Guac",
        },
      ],
      "subtitle": "Listings that were verified recently enough to move fast",
      "title": "Fresh this week",
    },
  ],
}
`;

exports[`read-route shapes — golden master > pins GET /v1/filters/metadata 1`] = `
{
  "cuisines": [
    "Bar",
    "Italian",
    "Japanese",
    "Mexican",
  ],
  "neighborhoods": [
    "Beltline East",
    "Colony Square",
    "Midtown",
    "North Avenue",
    "Ponce",
    "West Midtown",
  ],
  "tags": [
    "beltline",
    "cheap-eats",
    "drinks",
    "groups",
    "happy-hour",
    "late-night",
    "live-now",
    "pizza",
    "ramen",
    "student",
    "students",
    "tonight",
  ],
  "trustBands": [
    "founder_verified",
    "merchant_confirmed",
    "user_confirmed",
    "recently_updated",
    "needs_recheck",
    "disputed",
  ],
}
`;

exports[`read-route shapes — golden master > pins GET /v1/listings/:id detail for a known seed listing 1`] = `
{
  "affordabilityLabel": "Under $5",
  "categoryLabel": "Cheap eats",
  "conditions": "Dine-in only. While supplies last.",
  "confidenceScore": 0.94,
  "cuisine": "Mexican",
  "description": "Founder-added lunch and dinner special near the Howell Mill corridor.",
  "distanceMiles": 0.3,
  "freshUntilAt": "2026-04-15T03:00:00.000Z",
  "freshnessText": "Updated 42 mins ago",
  "id": "lst_taco_tuesday",
  "lastUpdatedAt": "2026-04-14T21:18:00.000Z",
  "latitude": 33.7867,
  "longitude": -84.4112,
  "neighborhood": "West Midtown",
  "offers": [
    {
      "currency": "USD",
      "dealPrice": 4.99,
      "id": "off_taco",
      "originalPrice": 9.99,
      "title": "Taco Tuesday Special",
    },
    {
      "currency": "USD",
      "dealPrice": 7.99,
      "id": "off_burrito",
      "originalPrice": 13.99,
      "title": "Burrito Bowl Combo",
    },
  ],
  "proofCount": 2,
  "rating": 4.7,
  "recheckAfterAt": "2026-04-15T15:00:00.000Z",
  "saved": false,
  "scheduleLabel": "Live now • Tue 4PM-10PM",
  "sourceNote": "Founder-added from menu board and in-store confirmation.",
  "tags": [
    "cheap-eats",
    "students",
    "live-now",
  ],
  "title": "Taco Tuesday Special",
  "trustBand": "founder_verified",
  "trustSummary": {
    "band": "founder_verified",
    "confidenceScore": 0.94,
    "disputeCount": 0,
    "explanation": "Verified directly by the founding team with recent source evidence.",
    "freshUntilAt": "2026-04-15T03:00:00.000Z",
    "proofCount": 2,
    "recentConfirmations": 5,
    "recheckAfterAt": "2026-04-15T15:00:00.000Z",
  },
  "valueNote": "Street tacos from $4.99 with rotating house fillings.",
  "venueAddress": "1200 Howell Mill Rd NW, Atlanta, GA 30318",
  "venueId": "ven_taqueria_del_sol",
  "venueName": "Taqueria del Sol",
}
`;

exports[`read-route shapes — golden master > pins GET /v1/listings/map-bounds over the Atlanta seed area 1`] = `
[
  {
    "affordabilityLabel": "Under $5",
    "confidenceScore": 0.94,
    "latitude": 33.7867,
    "listingId": "lst_taco_tuesday",
    "longitude": -84.4112,
    "neighborhood": "West Midtown",
    "saved": false,
    "title": "Taco Tuesday Special",
    "trustBand": "founder_verified",
    "venueId": "ven_taqueria_del_sol",
    "venueName": "Taqueria del Sol",
  },
  {
    "affordabilityLabel": "Under $10",
    "confidenceScore": 0.81,
    "latitude": 33.7815,
    "listingId": "lst_bogo_ramen",
    "longitude": -84.3873,
    "neighborhood": "Midtown",
    "saved": false,
    "title": "BOGO ramen bowls",
    "trustBand": "user_confirmed",
    "venueId": "ven_sakura_ramen",
    "venueName": "Sakura Ramen House",
  },
  {
    "affordabilityLabel": "Under $5",
    "confidenceScore": 0.43,
    "latitude": 33.7721,
    "listingId": "lst_slice_combo",
    "longitude": -84.3632,
    "neighborhood": "Ponce",
    "saved": false,
    "title": "Late-night slice and soda",
    "trustBand": "disputed",
    "venueId": "ven_bella_napoli",
    "venueName": "Bella Napoli",
  },
  {
    "affordabilityLabel": "Under $5",
    "confidenceScore": 0.86,
    "latitude": 33.7714,
    "listingId": "lst_two_dollar_taco",
    "longitude": -84.3639,
    "neighborhood": "North Avenue",
    "saved": false,
    "title": "$2 Taco Tuesday",
    "trustBand": "user_confirmed",
    "venueId": "ven_holy_guac",
    "venueName": "Holy Guac",
  },
  {
    "affordabilityLabel": "Under $15",
    "confidenceScore": 0.91,
    "latitude": 33.7863,
    "listingId": "lst_gyoza_bundle",
    "longitude": -84.3838,
    "neighborhood": "Colony Square",
    "saved": false,
    "title": "Free gyoza with bowl",
    "trustBand": "founder_verified",
    "venueId": "ven_neon_ramen",
    "venueName": "Neon Ramen",
  },
  {
    "affordabilityLabel": "Under $10",
    "confidenceScore": 0.69,
    "latitude": 33.7728,
    "listingId": "lst_happy_hour_pitcher",
    "longitude": -84.3661,
    "neighborhood": "Beltline East",
    "saved": false,
    "title": "Half-off pitcher happy hour",
    "trustBand": "merchant_confirmed",
    "venueId": "ven_beltline_bar",
    "venueName": "Beltline Bar",
  },
]
`;

exports[`read-route shapes — golden master > pins GET /v1/search for a known term 1`] = `
{
  "listings": [
    {
      "affordabilityLabel": "Under $10",
      "categoryLabel": "Tonight",
      "confidenceScore": 0.81,
      "cuisine": "Japanese",
      "distanceMiles": 0.8,
      "freshnessText": "3 recent confirmations",
      "id": "lst_bogo_ramen",
      "lastUpdatedAt": "2026-04-14T20:48:00.000Z",
      "latitude": 33.7815,
      "longitude": -84.3873,
      "neighborhood": "Midtown",
      "rating": 4.9,
      "saved": false,
      "scheduleLabel": "Tonight • 6PM-9PM",
      "tags": [
        "tonight",
        "groups",
        "ramen",
      ],
      "title": "BOGO ramen bowls",
      "trustBand": "user_confirmed",
      "valueNote": "Strong group value with late-evening availability.",
      "venueId": "ven_sakura_ramen",
      "venueName": "Sakura Ramen House",
    },
    {
      "affordabilityLabel": "Under $15",
      "categoryLabel": "Group-friendly",
      "confidenceScore": 0.91,
      "cuisine": "Japanese",
      "distanceMiles": 0.5,
      "freshnessText": "Founder verified",
      "id": "lst_gyoza_bundle",
      "lastUpdatedAt": "2026-04-14T16:19:00.000Z",
      "latitude": 33.7863,
      "longitude": -84.3838,
      "neighborhood": "Colony Square",
      "rating": 4.6,
      "saved": false,
      "scheduleLabel": "Tonight • Mon-Thu 5PM-8PM",
      "tags": [
        "tonight",
        "groups",
      ],
      "title": "Free gyoza with bowl",
      "trustBand": "founder_verified",
      "valueNote": "Good fallback when groups split between ramen styles.",
      "venueId": "ven_neon_ramen",
      "venueName": "Neon Ramen",
    },
  ],
  "neighborhoods": [
    "Midtown",
    "Colony Square",
  ],
  "nextCursor": null,
  "suggestions": [
    "Sakura Ramen House",
    "Neon Ramen",
    "BOGO ramen bowls",
  ],
  "venues": [
    {
      "activeListingCount": 1,
      "address": "933 Peachtree St NE, Atlanta, GA 30309",
      "id": "ven_sakura_ramen",
      "latitude": 33.7815,
      "listingIds": [
        "lst_bogo_ramen",
      ],
      "longitude": -84.3873,
      "name": "Sakura Ramen House",
      "neighborhood": "Midtown",
      "rating": 4.9,
      "slug": "sakura-ramen-house",
      "tags": [
        "tonight",
        "drinks",
        "groups",
      ],
    },
    {
      "activeListingCount": 1,
      "address": "1197 Peachtree St NE, Atlanta, GA 30361",
      "id": "ven_neon_ramen",
      "latitude": 33.7863,
      "listingIds": [
        "lst_gyoza_bundle",
      ],
      "longitude": -84.3838,
      "name": "Neon Ramen",
      "neighborhood": "Colony Square",
      "rating": 4.6,
      "slug": "neon-ramen",
      "tags": [
        "tonight",
        "groups",
      ],
    },
  ],
}
`;
